package Opgave1;

public interface Playable {

    public void play();

    public String getTitle();

    public int getDurationSeconds();

    public int getTime();
    public int getMinute();
    public int getSecond();

}
